Fix display portfolio on small screens

--- a/src/modules/slider_3d/slider_3d.scss
+++ b/src/modules/slider_3d/slider_3d.scss
@@ -12,7 +12,8 @@ p {
     height: 100vh;
     width: 100%;
     perspective: 999px;
-    transform-style: preserve-3d; 
+    transform-style: preserve-3d;
+    overflow: hidden;
 }
 .frame {
     position: absolute;
